implemented DTO layer and refactor API to use request/response DTOs